test/src/e2e_vm_tests/test_programs/should_pass/language/module_dep/src/lib.sw
library;

pub mod a;
pub mod b;

fn main() -> u32 {
  1
}
